--- a/index.html
+++ b/index.html
@@ -12,14 +12,22 @@
   <!-- jQuery and jQuery Mobile -->
     <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+
+  <!-- Leaflet -->
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+  <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+
+  <script data-main="/js/main" type="text/javascript" src='/js/libs/require.js'></script>
+  <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
 <!-- Home -->
-<div data-role="page" id="page1">
+<div data-role="page" id="map-page">
     <div data-theme="a" data-role="header">
         <h3>OSM mobile</h3>
     </div>
     <div data-role="content">
+        <div id="map"></div>
     </div>
 </div>
 </body>
