--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
   <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
 
-  <script data-main="/js/main" type="text/javascript" src='/js/libs/require.js'></script>
-  <link rel="stylesheet" href="/css/main.css" />
+  <script data-main="js/main" type="text/javascript" src='js/libs/require.js'></script>
+  <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
 <!-- Home -->
