+Full screen test

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <div data-role="page" id="map-page">
     <div data-theme="a" data-role="header">
         <h3>OSM mobile</h3>
+        <a href="#" class="ui-btn-right goFullScreen" data-role="button" data-icon="grid" data-theme="a">Full Screen</a>
     </div>
     <div data-role="content">
         <div id="map"></div>
