--- a/index.html
+++ b/index.html
@@ -25,10 +25,19 @@
 <div data-role="page" id="map-page">
     <div data-theme="a" data-role="header">
         <h3>OSM mobile</h3>
-        <a href="#" class="ui-btn-right goFullScreen" data-role="button" data-icon="grid" data-theme="a">Full Screen</a>
+        <!--<a href="#" class="ui-btn-right goFullScreen" data-role="button" data-icon="grid" data-theme="a">Full Screen</a>-->
+        <a href="#options" class="ui-btn-right" data-icon="gear">!</a>
     </div>
     <div data-role="content">
         <div id="map"></div>
+    </div>
+</div>
+<div data-role="page" id="options" data-add-back-btn="true">
+    <div data-theme="a" data-role="header">
+        <h3>Options</h3>
+    </div>
+    <div data-role="content">
+        <a href="#" class="ui-btn-right goFullScreen" data-role="button" data-icon="grid" data-theme="a">Full Screen</a>
     </div>
 </div>
 </body>
