HTML small change

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div data-theme="a" data-role="header">
         <h3>OSM mobile</h3>
         <!--<a href="#" class="ui-btn-right goFullScreen" data-role="button" data-icon="grid" data-theme="a">Full Screen</a>-->
-        <a href="#options" class="ui-btn-right" data-icon="gear">!</a>
+        <a href="#options" class="ui-btn-right" data-icon="gear">&nbsp;</a>
     </div>
     <div data-role="content">
         <div id="map"></div>
