--- a/index-debug.html
+++ b/index-debug.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
   <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
 
-  <script type="text/javascript" src="js/compressed/app-built.js"></script>
+  <script data-main="js/main" type="text/javascript" src='js/libs/require.js'></script>
   <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
