--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div data-theme="a" data-role="header">
         <h3>Options</h3>
     </div>
+    <a href="#" class="ui-btn-right goFullScreen" data-role="button" data-icon="grid" data-theme="a">Full Screen</a>
     <label for="full-screen-switcher">Full Screen Mode:</label>
     <select id="full-screen-switcher" data-role="slider" data-mini="true">
         <option value="off" checked>Off</option>
