--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 <option value="yes">Just a building</option>
                 <option value="industrial">Industrial</option>
                 <option value="garage">Garage</option>
+                <option value="shed">Shed</option>
                 <option value="garages">Garages</option>
                 <option value="house">House</option>
                 <option value="apartments">Apartments</option>
