added Settings button on feature-page

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 <div data-role="page" id="feature-page" data-add-back-btn="true">
     <div data-theme="a" data-role="header">
         <h3>Feature Page</h3>
+        <a href="#settings-page" class="ui-btn-right" data-transition="slide" data-icon="gear">&nbsp;</a>
     </div>
     <div id="feature-page-content">
         <div class="buildingDescription"></div>
