added Roof building type

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                 <option value="garages">Garages</option>
                 <option value="house">House</option>
                 <option value="apartments">Apartments</option>
+                <option value="roof">Roof</option>
                 <option value="kitchen">Kitchen</option>
                 <option value="warehouse">Warehouse</option>
                 <option value="church">Church</option>
