<<Count of changes>>

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <div id="saveBlock">
-        <p>Changes number: <em></em></p>
+        <p>Count of changes: <em></em></p>
         <div data-role="fieldcontain">
             <label for="osm_login">OSM Login:</label>
             <input id="osm_login" value="" />
