+ ability to add Housenumber

--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
                 <option value="commercial">Commercial</option>
             </select>
         </div>
+        <div data-role="fieldcontain">
+            <label for="houseNumber">House Number:</label>
+            <input type="text" id="houseNumber" />
+        </div>
     </div>
 </div>
 </body>
