added auto_close_feature_page feature

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
         </select>
     </div>
 
+    <div data-role="fieldcontain">
+        <label for="auto_close_feature_page">Auto close feature page:</label>
+        <select id="auto_close_feature_page" data-role="slider">
+            <option value="false">Off</option>
+            <option value="true">On</option>
+        </select>
+    </div>
+
     <div id="saveBlock">
         <p>Count of changes: <em></em></p>
         <div data-role="fieldcontain">
