Remove back buttons, add buttons "Go to map"

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
         <div id="map"></div>
     </div>
 </div>
-<div data-role="page" id="settings-page" data-add-back-btn="true">
+<div data-role="page" id="settings-page">
     <div data-theme="a" data-role="header">
         <h3>Options</h3>
+        <a href="#map-page" data-transition="slide" data-icon="arrow-l">map</a>
     </div>
     <div class="ui-grid-solo" id="goFullScreenBlock">
         <div class="ui-block-a"><button class="goFullScreen" type="v" data-theme="a">Full Screen</button></div>
@@ -82,6 +83,7 @@
 <div data-role="page" id="feature-page" data-add-back-btn="true">
     <div data-theme="a" data-role="header">
         <h3>Feature Page</h3>
+        <a href="#map-page" data-transition="slide" data-icon="arrow-l">map</a>
         <a href="#settings-page" class="ui-btn-right" data-transition="slide" data-icon="gear">&nbsp;</a>
     </div>
     <div id="feature-page-content">
