Remove back button

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 
 </div>
-<div data-role="page" id="feature-page" data-add-back-btn="true">
+<div data-role="page" id="feature-page">
     <div data-theme="a" data-role="header">
         <h3>Feature Page</h3>
         <a href="#map-page" data-transition="slide" data-icon="arrow-l">map</a>
