Changed leafletjs CDN

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>OSM mobile</title>
   
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css">
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.6.4/leaflet.css" />
   <link rel="stylesheet" href="css/main.css" />
   
   <!-- jQuery and jQuery Mobile -->
@@ -16,7 +16,7 @@
     <script src="js/libs/jquery.fullscreen.js"></script>
 
   <!-- Leaflet -->
-  <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.6.4/leaflet.js"></script>
 
   <script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
   <script type="text/javascript">
