--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <option value="3">3</option>
                 <option value="4">4</option>
                 <option value="5">5</option>
+                <option value="9">9</option>
             </select>
         </div>
         <div data-role="fieldcontain">
