--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 <option value="garages">Garages</option>
                 <option value="house">House</option>
                 <option value="apartments">Apartments</option>
+                <option value="retail">Retail</option>
                 <option value="roof">Roof</option>
                 <option value="kitchen">Kitchen</option>
                 <option value="warehouse">Warehouse</option>
